--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
             margin: 0px
         }
         .leaflet-container {
-            height: 100vh;
+            height: 100%;
         }
     </style>
 </head>
