--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Price Predictor</title>
-
+    <script async
+        src="https://maps.googleapis.com/maps/api/js?key=&loading=async&libraries=places&callback=initMap">
+    </script>
     <link rel="icon" href="./assets/icon/favicon.ico" />
     <link rel="apple-touch-icon" href="./assets/icon/apple-touch-icon.png" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
